--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-fileupload": "^1.5.0",
     "@types/node": "^22.2.0",
     "prisma": "^5.18.0",
     "ts-node": "^10.9.2",
@@ -25,6 +26,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.1",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
     "zod": "^3.23.8"
   }
