--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.21",
     "@types/express-fileupload": "^1.5.0",
     "@types/node": "^22.2.0",
+    "@types/uuid": "^10.0.0",
     "prisma": "^5.18.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
@@ -29,6 +30,7 @@
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   }
 }
