--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.1",
+    "express-rate-limit": "^7.4.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
     "uuid": "^10.0.0",
