--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,11 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-fileupload": "^1.5.0",
+    "@types/express-redis-cache": "^1.1.5",
     "@types/node": "^22.2.0",
     "@types/uuid": "^10.0.0",
+    "i": "^0.3.7",
+    "npm": "^10.8.2",
     "prisma": "^5.18.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
