--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
     "uuid": "^10.0.0",
+    "winston": "^3.14.2",
     "zod": "^3.23.8"
   }
 }
