--- a/BEversion2/package.json
+++ b/BEversion2/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "eslint": "npx eslint ./"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +32,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.1",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -38,6 +40,10 @@
     "@types/express-redis-cache": "^1.1.5",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/nodemailer": "^6.4.15",
-    "@types/uuid": "^10.0.0"
+    "@types/uuid": "^10.0.0",
+    "eslint": "^9.9.1",
+    "globals": "^15.9.0",
+    "husky": "^9.1.5",
+    "typescript-eslint": "^8.2.0"
   }
 }
