--- a/BEversion2/package.json
+++ b/BEversion2/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
-    "eslint": "npx eslint ./"
+    "eslint": "npx eslint ./",
+    "format:check": "prettier . --check",
+    "format:fix": "prettier . --fix"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +17,7 @@
     "@prisma/client": "^5.18.0",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.12.9",
+    "colorette": "^2.0.20",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -44,6 +47,7 @@
     "eslint": "^9.9.1",
     "globals": "^15.9.0",
     "husky": "^9.1.5",
+    "prettier": "3.3.3",
     "typescript-eslint": "^8.2.0"
   }
 }
